# LaneSwitchRL-Simulation

./: .gitignore  Env.ipynb  LaneSwitchRL-Simulation.ipynb  README.md  pyproject.toml
Archive/: 20241119_evaluation1.ipynb  LaneSwitchRL-Simulation.ipynb  PPO_Agent_task1_rev2.ipynb  PPO_task1_baseline_model.ipynb  PPO_task1_reward_shaping_model2&3.ipynb  PPO_task1_reward_shaping_model5&6.ipynb  TD_Agent.ipynb  TD_Agent_logging.ipynb  environment_gym_rs.py  environment_gym_rs2.py  environment_gym_rs3.py  task2_ppo.ipynb
Archive/TD_Task1/: Weighted_model.json  (+2 more)
notebooks/: 20241119_evaluation.ipynb  20241119_evaluation2.ipynb  20241119_evaluation3.ipynb  DQN_Agent_task1.ipynb  DQN_task1.ipynb  DQN_task1_reward_shaping.ipynb  Daniel-agents.ipynb  PPO_Agent.ipynb  PPO_Agent_GridSearch.ipynb  PPO_Agent_GridSearch_2.ipynb  PPO_Agent_archived.ipynb  PPO_Agent_task1.ipynb  PPO_Agent_task1_rev1.ipynb  PPO_Agent_task1_rev3.ipynb  PPO_Agent_task1_rev4.ipynb  PPO_task1_reward_shaping3.ipynb  PPO_task1_reward_shaping_model1&2.ipynb  PPO_task1_reward_shaping_model3&4.ipynb  PPO_task1_reward_shaping_model4.ipynb  PPO_task1_state_handling_model1.ipynb  TD_Agent.ipynb  TD_Agent_int.ipynb  TD_dashboard.ipynb  grid_search_results.txt  simulation.ipynb  task1Rulebased.ipynb  task2-agents.ipynb  task2.ipynb  visualization.py
src/: agent.py  custom_environment.py  environment.py  environment_gym.py  environment_gym_rev2.py  environment_gym_rs.py  environment_gym_rs1.py  environment_gym_rs2.py  environment_gym_rs3.py  task2_agents.py  task2_environment.py  task2_ppo.py
(+23 files in other folders)
