[tool.poetry]
name = "laneswitchrl-simulation"
version = "0.1.0"
description = ""
authors = ["Daniel James <danieljames96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.2"
matplotlib = "^3.9.2"
gymnasium = "0.28.1"
stable-baselines3 = "^2.3.2"
seaborn = "^0.13.2"
tqdm = "^4.66.6"
optuna = "^4.0.0"
imageio = "^2.36.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
